[package]
name = "server"
version = {workspace = true}
edition = {workspace = true}
rust-version = {workspace = true}
authors = {workspace = true}

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
